Fix for CI